# acoupipe

./: .gitignore  README.rst  pyproject.toml  setup.py
.github/workflows/: docs.yml  orga-ci.yml
docs/source/: conf.py  index.rst
docs/source/bib/: refs.bib
docs/source/contents/: datasets.rst  install.rst  links.rst
examples/: micgeom_sampling_example.py  numeric_attribute_sampling.py  pipeline_writeH5_example.py  point_source_example.py
src/acoupipe/: __init__.py  base.py  loader.py  pipeline.py  sampler.py  writer.py
src/acoupipe/datasets/: __init__.py  base.py  experimental.py  features.py  ir.py  micgeom.py  spectra_analytic.py  synthetic.py  utils.py
tests/: conftest.py  constants.py  dummy_dataset.py  miracle_test_config.py  pipeline_value_test.py  synthetic_test_config.py  test_dataset_tf.py  test_datasets.py  test_dummy_dataset.py  test_ir.py  test_loader.py  test_random_state.py  test_sampler.py  test_save_h5.py  test_save_tfrecord.py  test_spectra.py
tests/_regtest_outputs/test_datasets.test_miracle_multiprocessing_values_correct[0-1000-sourcemap-analytic]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_miracle_multiprocessing_values_correct[0-1000-sourcemap-welch]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_miracle_multiprocessing_values_correct[0-1000-sourcemap-wishart]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_miracle_values_correct[0-1000-csm-analytic]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_miracle_values_correct[0-1000-csm-welch]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_miracle_values_correct[0-1000-csm-wishart]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_miracle_values_correct[0-1000-csmtriu-analytic]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_miracle_values_correct[0-1000-csmtriu-welch]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_miracle_values_correct[0-1000-csmtriu-wishart]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_miracle_values_correct[0-1000-eigmode-analytic]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_miracle_values_correct[0-1000-eigmode-welch]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_miracle_values_correct[0-1000-eigmode-wishart]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_miracle_values_correct[0-1000-noise_strength_analytic-analytic]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_miracle_values_correct[0-1000-noise_strength_estimated-welch]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_miracle_values_correct[0-1000-noise_strength_estimated-wishart]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_miracle_values_correct[0-1000-source_strength_analytic-welch]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_miracle_values_correct[0-1000-source_strength_analytic-wishart]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_miracle_values_correct[0-1000-source_strength_estimated-welch]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_miracle_values_correct[0-1000-source_strength_estimated-wishart]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_miracle_values_correct[0-1000-spectrogram-welch]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_miracle_values_correct[0-1000-targetmap_analytic-welch]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_miracle_values_correct[0-1000-targetmap_analytic-wishart]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_miracle_values_correct[0-1000-targetmap_estimated-welch]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_miracle_values_correct[0-1000-targetmap_estimated-wishart]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_values_correct[0-1000-csm-analytic]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_values_correct[0-1000-csm-welch]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_values_correct[0-1000-csm-wishart]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_values_correct[0-1000-csmtriu-analytic]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_values_correct[0-1000-csmtriu-wishart]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_values_correct[0-1000-loc-welch]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_values_correct[0-1000-noise_strength_estimated-welch]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_values_correct[0-1000-noise_strength_estimated-wishart]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_values_correct[0-1000-source_strength_estimated-welch]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_values_correct[0-1000-source_strength_estimated-wishart]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_values_correct[0-1000-sourcemap-welch]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_values_correct[0-1000-sourcemap-wishart]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_values_correct[0-1000-targetmap_estimated-welch]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_values_correct[0-1000-targetmap_estimated-wishart]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_values_correct[0-None-csm-analytic]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_values_correct[0-None-csm-wishart]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_values_correct[0-None-csmtriu-analytic]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_values_correct[0-None-csmtriu-wishart]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_values_correct[0-None-noise_strength_estimated-welch]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_values_correct[0-None-noise_strength_estimated-wishart]__0/: arrays.npy
tests/_regtest_outputs/test_datasets.test_values_correct[0-None-source_strength_estimated-welch]__0/: arrays.npy
tests/multiprocessing/: conftest.py  pipeline_value_test.py  test_sampler.py
tests/regression/: test_datasets.py
(+86 files in other folders)
