
[project]
name = "acoupipe"
dynamic = ["version"]
description = "Library for the generation of large-scale microphone array data for machine learning"
requires-python = ">=3.11,<3.14"
authors = [
    {name = "Acoular Development Team", email = "info@acoular.org"},
]
readme = "README.rst"
license = {file = "LICENSE.txt"}
keywords = [
    "acoustics",
    "beamforming",
    "deep learning",
    "machine learning",
    "microphone array",
    "sound source localization",
    "sound source characterization",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
	'acoular>=26.1',
	'ray[default]',
	'h5py',
	'tqdm',
    'irdl',
]
maintainers = [
    {name = "Adam Kujawski", email = "adam.kujawski@tu-berlin.de"},
    {name = "Art Pelling", email = "a.pelling@tu-berlin.de"},
]

[dependency-groups]
docs = [
    "ipython",
    "graphviz",
    "matplotlib",
    "numpydoc",
    "ipykernel",
    "nb-clean",
    "sphinx",
    "sphinx-autoapi",
    "sphinx-design",
    "nbsphinx",
    "pydata-sphinx-theme",
    "sphinx-gallery",
    "sphinxcontrib.bibtex",
    "pandoc",
]

lint = [
    "ruff==0.14.2",
]

unsupported = [
    "pyroomacoustics",
]

tests = [
    "diff_cover",
    "pytest",
    "pytest-cov",
    "pytest-regtest",
    "pyyaml",
    "pandas",
    "tensorflow",
]

dev = [
    {include-group = "docs"},
    {include-group = "lint"},
    {include-group = "tests"},
]


[project.urls]
documentation = "https://adku1173.github.io/acoupipe/"
repository = "https://github.com/adku1173/acoupipe"
source = "https://github.com/adku1173/acoupipe"
tracker = "https://github.com/adku1173/acoupipe/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/acoupipe/version.py"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"
explicit = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

# Ensure cross-platform compatibility: require Windows AMD64 support
# This forces uv to resolve dependencies that have wheels for Windows


[tool.pytest.ini_options]
testpaths = "tests"
pythonpath = ["src"]
addopts = "-v --durations=10 --cov-report=html --cov-report=term-missing"
norecursedirs = ["multiprocessing"] # default pytest collection and current CI do not descend into tests/multiprocessing

[tool.coverage.run]
omit = [
    "src/acoupipe/base.py",
    "src/acoupipe/datasets/base.py",
]

[tool.coverage.report]
skip_covered = false
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
# Note: regression tests are in tests/regression/ and are discovered normally
markers = [
    "multiprocessing: marks tests that require multiprocessing (deselect with '-m \"not multiprocessing\"')",
]
filterwarnings = [
    #"error", # treat warnings as errors
    "ignore::pluggy.PluggyTeardownRaisedWarning", # raised internally by pytest-regtest
    "ignore:numpy.core.multiarray is deprecated*:DeprecationWarning", # raised internally by pylops
    "ignore:module 'sre_parse' is deprecated:DeprecationWarning", # raised internally by traits
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning", # raised internally by traits
    "ignore:The TBB threading layer requires TBB version:numba.core.errors.NumbaWarning", # raised internally by numba
    "ignore:FNV hashing is not implemented in Numba:UserWarning", # raised internally by numba
    # Suppress warnings about unclosed files in tables at the end of the tests
    "ignore:Closing remaining open file*:tables.exceptions.UnclosedFileWarning",
]

[tool.hatch.build.targets.sdist]
include = [
  "/acoupipe",
]

[tool.hatch.build.targets.wheel]
packages = ["src/acoupipe"]
