
[project]
name = "acoupipe"
dynamic = ["version"]
description = "Library for the generation of large-scale microphone array data for machine learning"
requires-python = ">=3.11,<3.14"
authors = [
    {name = "Acoular Development Team", email = "info@acoular.org"},
]
readme = "README.rst"
license = {file = "LICENSE.txt"}
keywords = [
    "acoustics",
    "beamforming",
    "deep learning",
    "machine learning",
    "microphone array",
    "sound source localization",
    "sound source characterization",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
	'acoular>=26.1',
	'ray[default]',
	'h5py',
	'tqdm',
    'irdl',
]
maintainers = [
    {name = "Adam Kujawski", email = "adam.kujawski@tu-berlin.de"},
    {name = "Art Pelling", email = "a.pelling@tu-berlin.de"},
]

[dependency-groups]
docs = [
    "ipython",
    "graphviz",
    "matplotlib",
    "numpydoc",
    "ipykernel",
    "nb-clean",
    "sphinx",
    "sphinx-autoapi",
    "sphinx-design",
    "nbsphinx",
    "pydata-sphinx-theme",
    "sphinx-gallery",
    "sphinxcontrib.bibtex",
    "pandoc",
]

lint = [
    "acoular-ruff @ git+https://github.com/acoular/ci.git@ruff-v1.0",
]

unsupported = [
    "pyroomacoustics",
]

tests = [
    "diff_cover",
    "pytest",
    "pytest-cov",
    "pytest-regtest",
    "pyyaml",
    "pandas",
    "tensorflow",
]

dev = [
    {include-group = "docs"},
    {include-group = "lint"},
    {include-group = "tests"},
]

[tool.ruff]
extend = ".venv/share/ruff/ruff.acoular.toml"
src = ["src"]
extend-exclude = ["docs/source"]   # shared config's exclude resolves to its own dir, not the project root

[tool.ruff.lint]
extend-ignore = [
    # ===== Temporary migration guards (removed in the noted sub-issue) =====
    "G004", "LOG015",                    # 11  logging
    "PGH004", "RUF100", "E741",          # 10  stale-noqa cleanup / ambiguous names
    # no dedicated sub-issue -> general code cleanup, remove last
    "RUF015", "RUF021", "C419", "SIM108", "SIM114",  # 15
    "PLR5501", "PLR1711", "PLW0120",                 # 15
    "TRY",                                           # 15  exception style (TRY003/004/201)
    "EXE002",                                        # 15  exec bit (or `chmod -x src/acoupipe/*.py`)
    "W291", "W293", "COM819", "D210", "D403", "PLR2044",  # 15  whitespace/format trivia (or `ruff format`)

    # ===== Permanent — mirror Acoular's pyproject (no sub-issue; never removed) =====
    "FBT002", "FBT003",  # boolean positional args
    "PTH",               # os.path -> pathlib
    "NPY002",            # legacy numpy RNG
    "PERF4",             # list-comprehension perf
    "PLR2004",           # magic-value comparison
    "PLR091",            # too many args/branches/returns/statements
    "PLW2901",           # overwritten loop variable
    "RUF005",            # iterable concatenation
    "RUF059",            # unused unpacked variable
    "S307",              # intentional eval() in sampler
]

[tool.ruff.format]
#docstring-code-line-length = 120

[tool.ruff.lint.per-file-ignores]
# In each src entry: E501/W505 -> the file's 3-8 line-length task; D* -> 9; N*/ARG*/SLF001 -> 10
# --- src: 3 core modules ---
"src/acoupipe/base.py"                = ["D413"]
"src/acoupipe/config.py"              = ["D100"]
"src/acoupipe/version.py"             = ["D100"]
"src/acoupipe/loader.py"              = ["D413"]
"src/acoupipe/pipeline.py"            = ["D101", "D102", "D105", "D107", "D413"]
"src/acoupipe/writer.py"              = ["D102", "D205", "D212", "D413"]
# --- src: 4 samplers ---
"src/acoupipe/sampler.py"             = ["D101", "D102", "N806"]
# --- src: 5 small dataset modules ---
"src/acoupipe/datasets/base.py"       = ["D102", "D107", "D212", "D413", "D417"]
"src/acoupipe/datasets/micgeom.py"    = ["D100"]
"src/acoupipe/datasets/utils.py"      = ["D100", "D103", "D205", "D212", "D413", "N806"]
# --- src: 6 feature extraction ---
"src/acoupipe/datasets/features.py"   = ["ARG001", "ARG004", "D100", "D101", "D102", "D103", "D212", "D413", "D417", "SLF001"]
# --- src: 7 synthetic datasets ---
"src/acoupipe/datasets/synthetic.py"  = ["ARG001", "ARG004", "D102", "D103", "D107", "D205", "D212", "D413", "D416", "D417", "E501", "N806", "SLF001", "W505"]
"src/acoupipe/datasets/spectra_analytic.py" = ["D100", "D101", "D212", "D413", "E501", "N802", "N806"]
# --- src: 8 experimental datasets ---
"src/acoupipe/datasets/experimental.py" = ["ARG002", "ARG004", "D102", "D412", "D413", "D416", "D417", "E501", "N806", "S101", "SLF001", "W505"]
"src/acoupipe/datasets/ir.py"          = ["D100", "D103", "D413", "D417", "E501", "N806", "W505"]

# --- 14 examples ---
"examples/micgeom_sampling_example.py"   = ["D100", "INP001"]
"examples/numeric_attribute_sampling.py" = ["D212"]
"examples/pipeline_writeH5_example.py"   = ["ARG001", "D212", "INP001"]
"examples/point_source_example.py"       = ["D100", "INP001"]

# --- app ---
"app/main.py" = ["A002", "D100", "D103", "DTZ005", "E501", "INP001", "PLC0415"]  # PLC0415 = intentional lazy CLI import

# --- 12 tests (targeted) ---
"tests/__init__.py"                            = ["D104"]
"tests/conftest.py"                            = ["D100", "D103"]
"tests/dummy_dataset.py"                       = ["ARG001", "ARG002", "ARG005", "D107", "D413", "F811", "F841", "PLC0415", "PLR1704", "RET505", "S301", "SLF001", "T201", "UP024", "UP028", "W505"]
"tests/miracle_test_config.py"                 = ["D107", "PLC0415"]
"tests/multiprocessing/__init__.py"            = ["D104"]
"tests/multiprocessing/conftest.py"            = ["D100", "D103"]
"tests/multiprocessing/pipeline_value_test.py" = ["ARG005", "D103", "RET504"]
"tests/multiprocessing/test_sampler.py"        = ["ARG005", "D100", "D103", "PIE808", "PT011", "S101"]
"tests/pipeline_value_test.py"                 = ["ARG005", "D103", "RET504"]
"tests/regression/__init__.py"                 = ["D104"]
"tests/regression/multiprocessing/__init__.py" = ["D104"]
"tests/regression/multiprocessing/test_datasets.py" = ["D100"]
"tests/regression/test_datasets.py"            = ["ARG005", "D100", "D103", "S101", "SIM118", "W505"]
"tests/synthetic_test_config.py"               = ["D102"]
"tests/test_dataset_tf.py"                     = ["ARG001", "PLC0415", "S101", "SIM118"]
"tests/test_dummy_dataset.py"                  = ["B007", "B905", "F841", "PLC0415", "PLW1508", "S101", "SLF001"]
"tests/test_ir.py"                             = ["ARG001", "ARG005", "D100", "D103", "EM101", "S101", "SLF001"]
"tests/test_loader.py"                         = ["D100", "S101"]
"tests/test_random_state.py"                   = ["D101", "S101", "T201"]
"tests/test_sampler.py"                        = ["ARG005", "D100", "D103", "PIE808", "PT006", "PT011", "PT014", "PT018", "S101"]
"tests/test_save_h5.py"                        = ["PLC0415", "S101"]
"tests/test_save_tfrecord.py"                  = ["ARG001", "PLC0415"]
"tests/test_spectra.py"                        = ["ARG001", "D100", "D103", "N802", "N806", "PT006", "S101", "SLF001"]
# --- 13 throughput ---
"tests/throughput/*" = ["ALL"]


[project.urls]
documentation = "https://adku1173.github.io/acoupipe/"
repository = "https://github.com/adku1173/acoupipe"
source = "https://github.com/adku1173/acoupipe"
tracker = "https://github.com/adku1173/acoupipe/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/acoupipe/version.py"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"
explicit = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

# Ensure cross-platform compatibility: require Windows AMD64 support
# This forces uv to resolve dependencies that have wheels for Windows


[tool.pytest.ini_options]
testpaths = "tests"
pythonpath = ["src"]
addopts = "-v --durations=10 --cov-report=html --cov-report=term-missing"
norecursedirs = ["multiprocessing"] # default pytest collection and current CI do not descend into tests/multiprocessing

[tool.coverage.run]
omit = [
    "src/acoupipe/base.py",
    "src/acoupipe/datasets/base.py",
]

[tool.coverage.report]
skip_covered = false
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
# Note: regression tests are in tests/regression/ and are discovered normally
markers = [
    "multiprocessing: marks tests that require multiprocessing (deselect with '-m \"not multiprocessing\"')",
]
filterwarnings = [
    #"error", # treat warnings as errors
    "ignore::pluggy.PluggyTeardownRaisedWarning", # raised internally by pytest-regtest
    "ignore:numpy.core.multiarray is deprecated*:DeprecationWarning", # raised internally by pylops
    "ignore:module 'sre_parse' is deprecated:DeprecationWarning", # raised internally by traits
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning", # raised internally by traits
    "ignore:The TBB threading layer requires TBB version:numba.core.errors.NumbaWarning", # raised internally by numba
    "ignore:FNV hashing is not implemented in Numba:UserWarning", # raised internally by numba
    # Suppress warnings about unclosed files in tables at the end of the tests
    "ignore:Closing remaining open file*:tables.exceptions.UnclosedFileWarning",
]

[tool.hatch.build.targets.sdist]
include = [
  "/acoupipe",
]

[tool.hatch.build.targets.wheel]
packages = ["src/acoupipe"]
